# kdtree-playground

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  post-start.sh
.github/workflows/: lint.yml
kdtree_lib/: __init__.py  kdtree_basic.py  kdtree_cupy.py  kdtree_open3d.py
kdtree_lib/interface/: __init__.py  kdtree.py
tests/: test_basic.py  test_kdtree.py  test_speed.py
